--- a/LaserDefender.CSharp.csproj
+++ b/LaserDefender.CSharp.csproj
@@ -63,9 +63,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Entities\Enemy\EnemyBehavior.cs" />
+    <Compile Include="Assets\Entities\EnemyFormation\EnemySpawner.cs" />
+    <Compile Include="Assets\Entities\EnemyFormation\Position.cs" />
+    <Compile Include="Assets\Entities\Player\PlayerController.cs" />
     <Compile Include="Assets\Scripts\LevelManager.cs" />
     <Compile Include="Assets\Scripts\MusicPlayer.cs" />
-    <Compile Include="Assets\Scripts\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\Projectile.cs" />
+    <Compile Include="Assets\Scripts\Shredder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
